--- a/config/field_config.json
+++ b/config/field_config.json
@@ -1,9 +1,11 @@
 {
     "flowtide":{
+        "sheet_name_format": "快電商",
         "customer_order_number":"客戶訂單號碼",
         "tcat_number":"查貨號碼"
     },
     "c2c":{
+        "order_name_format":"A442出貨單資料",
         "customer_order_number":"平台訂單編號",
         "delivery_number":"配送編號-已出貨",
         "current_status":"狀態回填-已送達",
