--- a/config/field_config.json
+++ b/config/field_config.json
@@ -1,17 +1,21 @@
 {
     "flowtide":{
-        "sheet_name_format": "快電商",
+        "sheet_name_format": "快電商XCHECK2CHECKTEST",
         "customer_order_number":"客戶訂單號碼",
-        "tcat_number":"查貨號碼"
+        "tcat_number":"託運單號",
+        "mark_field":"備註",
+        "c2c_mark":"減醣市集 X 快電商 C2C BUY"
     },
     "c2c":{
         "order_name_format":"A442出貨單資料",
         "customer_order_number":"平台訂單編號",
         "delivery_number":"配送編號-已出貨",
         "current_status":"狀態回填-已送達",
+        "shipping_date":"廠商發貨日期",
         "create_date":"建立時間",
         "status_name":{
             "success":"順利送達",
+            "collected":"已集貨",
             "no_data":"尚無資料"
         }
     }
