--- a/config/field_config.json
+++ b/config/field_config.json
@@ -1,6 +1,7 @@
 {
     "flowtide":{
-        "sheet_name_format": "快電商XCHECK2CHECKTEST",
+        "sender_email":"service@flowtide.com.tw",
+        "sheet_name_format": "快電商XCHECK2CHECK",
         "customer_order_number":"客戶訂單號碼",
         "tcat_number":"託運單號",
         "mark_field":"備註",
