--- a/src/config/field_config.json
+++ b/src/config/field_config.json
@@ -6,7 +6,8 @@
         "customer_order_number":"客戶訂單號碼",
         "tcat_number":"託運單號",
         "mark_field":"備註",
-        "c2c_mark":"減醣市集 X 快電商 C2C BUY"
+        "c2c_mark":"減醣市集 X 快電商 C2C BUY",
+        "tcat_name" : "TCAT"
     },
     "c2c":{
         "order_name_format":"A442出貨單資料",
@@ -20,5 +21,9 @@
             "collected":"已集貨",
             "no_data":"尚無資料"
         }
+    },
+    "shopline":{
+        "sender_email":"noreply@shopline.com",
+        "mail_subject":"SHOPLINE登入驗證碼"
     }
 }
