--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - revamp
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch:
 
 env:
   PROJECT_ID: mybagel-458109
@@ -37,8 +37,7 @@ jobs:
               - 'src/**'
               - 'Dockerfile'
               - 'requirements.txt'
-              - 'main_scripts.py'
-              - 'sub_scripts.py'
+              - 'app.py'
             worker:
               - 'src/**'
               - 'Dockerfile.worker'
@@ -50,7 +49,7 @@ jobs:
               - 'frontend/**'
 
   # ===========================================
-  # Build and Push Docker Images (only if changed)
+  # Build API Image
   # ===========================================
   build-api:
     name: Build API Image
@@ -71,11 +70,8 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-
       - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker ${{ env.REGISTRY }}
+        run: gcloud auth configure-docker ${{ env.REGISTRY }} --quiet
 
       - name: Build and Push API Image
         run: |
@@ -84,6 +80,9 @@ jobs:
           docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/api:${{ github.sha }}
           docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/api:latest
 
+  # ===========================================
+  # Build Worker Image
+  # ===========================================
   build-worker:
     name: Build Worker Image
     runs-on: ubuntu-latest
@@ -98,34 +97,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Debug - List src/config contents
-        run: |
-          echo "=== Checking src/config directory ==="
-          ls -la src/config/ || echo "src/config does not exist"
-          echo "=== Git status ==="
-          git status
-          git log --oneline -3
-
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-
       - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker ${{ env.REGISTRY }}
+        run: gcloud auth configure-docker ${{ env.REGISTRY }} --quiet
 
       - name: Build and Push Worker Image
         run: |
           docker build -f Dockerfile.worker -t ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/worker:${{ github.sha }} .
           docker tag ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/worker:${{ github.sha }} ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/worker:latest
-          echo "=== Verify image contents ==="
-          docker run --rm ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/worker:${{ github.sha }} ls -la /app/src/config/
           docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/worker:${{ github.sha }}
           docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/worker:latest
 
+  # ===========================================
+  # Build Frontend Image
+  # ===========================================
   build-frontend:
     name: Build Frontend Image
     runs-on: ubuntu-latest
@@ -145,26 +134,15 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-
       - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker ${{ env.REGISTRY }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        run: gcloud auth configure-docker ${{ env.REGISTRY }} --quiet
 
       - name: Build and Push Frontend Image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:${{ github.sha }}
-            ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:latest
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:cache
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:cache,mode=max
+        run: |
+          docker build -f frontend/Dockerfile -t ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:${{ github.sha }} ./frontend
+          docker tag ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:${{ github.sha }} ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:latest
+          docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:${{ github.sha }}
+          docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/frontend:latest
 
   # ===========================================
   # Deploy to GCP VM
@@ -173,7 +151,6 @@ jobs:
     name: Deploy to GCP VM
     runs-on: ubuntu-latest
     needs: [changes, build-api, build-worker, build-frontend]
-    # Run deploy if any build ran, or if no changes (just redeploy)
     if: always() && !cancelled() && !failure()
 
     permissions:
@@ -192,86 +169,68 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Create deployment script
-        run: |
-          cat > deploy_script.sh << 'SCRIPT_EOF'
-          #!/bin/bash
-          set -e
-
-          echo '=== Setting up project directory ==='
-          sudo mkdir -p /opt/bagel-shop
-          sudo chown $(whoami):$(whoami) /opt/bagel-shop
-          cd /opt/bagel-shop
-
-          echo '=== Authenticating to Artifact Registry ==='
-          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
-
-          echo '=== Pulling latest images ==='
-          docker pull us-central1-docker.pkg.dev/mybagel-458109/bagel-repo/api:latest || true
-          docker pull us-central1-docker.pkg.dev/mybagel-458109/bagel-repo/worker:latest || true
-          docker pull us-central1-docker.pkg.dev/mybagel-458109/bagel-repo/frontend:latest || true
-
-          echo '=== docker-compose.yml will be copied via scp ==='
-
-          echo '=== Creating required directories ==='
-          mkdir -p logs
-
-          echo '=== Stopping old containers ==='
-          docker compose down || true
-
-          echo '=== Starting containers ==='
-          docker compose up -d api worker frontend
-
-          echo '=== Cleaning up old images ==='
-          docker image prune -f
-          docker image prune -a -f --filter 'until=24h' || true
-
-          echo '=== Deployment complete ==='
-          docker compose ps
-          SCRIPT_EOF
-          chmod +x deploy_script.sh
-
       - name: Create .env file on VM
         run: |
           gcloud compute ssh ${{ env.GCE_INSTANCE }} --zone=${{ env.GCE_ZONE }} --command="
             sudo mkdir -p /opt/bagel-shop
             sudo chown \$(whoami):\$(whoami) /opt/bagel-shop
-            cat > /opt/bagel-shop/.env << 'ENVEOF'
-          REGISTRY=us-central1-docker.pkg.dev/mybagel-458109/bagel-repo
+            cat > /opt/bagel-shop/.env << 'EOF'
+          REGISTRY=${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}
           TAG=latest
           SHOPLINE_TOKEN=${{ secrets.SHOPLINE_TOKEN }}
           GMAIL_ADDRESS=${{ secrets.GMAIL_ADDRESS }}
           GMAIL_APP_PASSWORD=${{ secrets.GMAIL_APP_PASSWORD }}
           LINE_ACCESS_TOKEN=${{ secrets.LINE_ACCESS_TOKEN }}
           LINE_GROUP_ID=${{ secrets.LINE_GROUP_ID }}
-          ENVEOF
+          EOF
           "
 
-      - name: Copy files and run deployment script
+      - name: Deploy to VM
         run: |
-          gcloud compute scp deploy_script.sh ${{ env.GCE_INSTANCE }}:/tmp/deploy_script.sh --zone=${{ env.GCE_ZONE }}
+          # Copy docker-compose.yml to VM
           gcloud compute scp docker-compose.yml ${{ env.GCE_INSTANCE }}:/opt/bagel-shop/docker-compose.yml --zone=${{ env.GCE_ZONE }}
-          gcloud compute ssh ${{ env.GCE_INSTANCE }} --zone=${{ env.GCE_ZONE }} --command="bash /tmp/deploy_script.sh"
+
+          # Run deployment commands on VM
+          gcloud compute ssh ${{ env.GCE_INSTANCE }} --zone=${{ env.GCE_ZONE }} --command="
+            cd /opt/bagel-shop
+
+            # Authenticate to Artifact Registry
+            gcloud auth configure-docker ${{ env.REGISTRY }} --quiet
+
+            # Create logs directory
+            mkdir -p logs
+
+            # Pull latest images
+            docker compose pull
+
+            # Restart containers with new images
+            docker compose up -d --force-recreate api worker frontend
+
+            # Clean up old images
+            docker image prune -f
+
+            # Show container status
+            docker compose ps
+          "
+
+      - name: Health Check
+        run: |
+          sleep 30
+          gcloud compute ssh ${{ env.GCE_INSTANCE }} --zone=${{ env.GCE_ZONE }} \
+            --command="curl -f http://localhost:8080/health || exit 1"
 
       - name: Cleanup Old Images in Artifact Registry
+        if: success()
         run: |
-          # Keep only the latest 5 images for each repository
           for IMAGE in api worker frontend; do
             echo "Cleaning up old $IMAGE images..."
             gcloud artifacts docker images list \
               ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/$IMAGE \
               --sort-by=~CREATE_TIME \
               --format="get(version)" \
-              --filter="tags!~latest AND tags!~cache" \
+              --filter="tags!~latest" \
               | tail -n +6 \
               | xargs -I {} gcloud artifacts docker images delete \
                   ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/$IMAGE@{} \
                   --quiet --delete-tags 2>/dev/null || true
           done
-
-      - name: Health Check
-        run: |
-          sleep 30
-          gcloud compute ssh ${{ env.GCE_INSTANCE }} \
-            --zone=${{ env.GCE_ZONE }} \
-            --command="curl -f http://localhost:8080/health || exit 1"
