--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,27 +39,21 @@ http {
         server frontend:3000;
     }
 
-    # HTTP server (redirect to HTTPS in production)
+    # HTTP server on port 3000 (GCP firewall only allows 3000)
     server {
-        listen 80;
+        listen 3000;
         server_name _;
 
-        # Health check endpoint (no redirect)
+        # Health check endpoint
         location /health {
             proxy_pass http://api;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # For production, uncomment to redirect to HTTPS
-        # location / {
-        #     return 301 https://$host$request_uri;
-        # }
-
-        # For development, proxy directly
-        location /api {
-            rewrite ^/api(.*)$ $1 break;
-            proxy_pass http://api;
+        # API proxy - forward /api/* to backend api:8080/*
+        location /api/ {
+            proxy_pass http://api/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -69,6 +63,7 @@ http {
             limit_req zone=api_limit burst=20 nodelay;
         }
 
+        # Frontend - all other requests
         location / {
             proxy_pass http://frontend;
             proxy_set_header Host $host;
