--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,13 @@ LINE_GROUP_ID=your_line_group_id_here
 DB_PASSWORD=your_db_password_here
 
 # ===========================================
+# Inventory System Authentication
+# ===========================================
+# Password for inventory page access
+INVENTORY_PASSWORD=37239421
+
+
+# ===========================================
 # GitHub Actions Only (not needed locally)
 # ===========================================
 # GCP_SA_KEY=<base64 encoded service account JSON>
