--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -184,6 +184,7 @@ jobs:
           LINE_GROUP_ID=${{ secrets.LINE_GROUP_ID }}
           SUPABASE_URL=${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
+          INVENTORY_PASSWORD=${{ secrets.INVENTORY_PASSWORD }}
           EOF
           "
 
