--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - LINE_GROUP_ID=${LINE_GROUP_ID}
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_KEY=${SUPABASE_KEY}
+      - INVENTORY_PASSWORD=${INVENTORY_PASSWORD}
     volumes:
       - ./logs:/app/logs
       # Note: src/config is baked into the image, no need to mount in production
@@ -52,6 +53,7 @@ services:
       - LINE_GROUP_ID=${LINE_GROUP_ID}
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_KEY=${SUPABASE_KEY}
+      - INVENTORY_PASSWORD=${INVENTORY_PASSWORD}
     volumes:
       - ./logs:/app/logs
       # Note: src/config is baked into the image, no need to mount in production
