--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ LINE_GROUP_ID=your_line_group_id_here
 # LINE_CHANNEL_ACCESS_TOKEN=your_line_channel_access_token_here
 # LINE_CHANNEL_SECRET=your_line_channel_secret_here
 
+# Supabase (Inventory Database)
+SUPABASE_URL=your_supabase_url_here
+SUPABASE_KEY=your_supabase_anon_key_here
+
 # Database (for future use)
 DB_PASSWORD=your_db_password_here
 
