--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -41,16 +41,16 @@ echo "Timezone: $(date +%Z)"\n\
 echo "Current time: $(date)"\n\
 echo ""\n\
 echo "Scheduled jobs:"\n\
-echo "  - sub_scripts.py: 13:30, 14:00, 20:30, 20:50 (UTC+8)"\n\
-echo "  - main_scripts.py: 21:00 (UTC+8)"\n\
+echo "  - sub_scripts.py: 13:30, 14:00 (UTC+8)"\n\
+echo "  - main_scripts.py: 20:30, 20:50 (UTC+8)"\n\
 echo "  - inventory_scripts.py: 21:05 (UTC+8)"\n\
 echo ""\n\
 \n\
 # Export all environment variables to a file for cron\n\
 printenv | grep -v "no_proxy" > /etc/environment\n\
 \n\
-# Also write env vars to cron environment\n\
-printenv | grep -E "^[A-Z_]+=" | sed "s/^/export /" > /app/.env.sh\n\
+# Also write env vars to cron environment (with quotes to handle special chars)\n\
+printenv | grep -E "^[A-Z_]+=" | sed '\''s/=/="/; s/$/"/; s/^/export /'\'' > /app/.env.sh\n\
 \n\
 echo "Environment variables exported for cron"\n\
 \n\
