--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,9 @@ LINE_GROUP_ID=your_line_group_id_here
 SUPABASE_URL=your_supabase_url_here
 SUPABASE_KEY=your_supabase_anon_key_here
 
-# Database (for future use)
-DB_PASSWORD=your_db_password_here
+# Database Connection (for migrations)
+# Format: postgresql://user:password@host:port/database
+DATABASE_URL=postgresql://postgres:password@host:5432/postgres
 
 # ===========================================
 # Inventory System Authentication
