--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,43 +1,31 @@
 # Dependencies
-node_modules/
-.pnp
-.pnp.js
+node_modules
+npm-debug.log
 
-# Testing
-coverage/
+# Next.js build output
+.next
+out
 
-# Next.js
-.next/
-out/
+# Cache
+.turbo
+.cache
+*.log
 
-# Production
-build/
+# Environment
+.env
+.env.local
+.env.*.local
 
-# Misc
+# OS
 .DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local env files
-.env*.local
-
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
+Thumbs.db
 
 # IDE
-.vscode/
-.idea/
+.vscode
+.idea
+*.swp
+*.swo
 
-# Virtual env
-venv/
-
-# Test files
-testexcel/
+# Test
+coverage
+.nyc_output
