--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
       - INVENTORY_PASSWORD=${INVENTORY_PASSWORD}
     volumes:
       - ./logs:/app/logs
-      # Note: src/config is baked into the image, no need to mount in production
+      # Mount service account file for easy updates without rebuild
+      - ./src/config/mybagel-458109-30f35338f350.json:/app/src/config/mybagel-458109-30f35338f350.json:ro
     networks:
       - bagel-network
     healthcheck:
@@ -56,7 +57,8 @@ services:
       - INVENTORY_PASSWORD=${INVENTORY_PASSWORD}
     volumes:
       - ./logs:/app/logs
-      # Note: src/config is baked into the image, no need to mount in production
+      # Mount service account file for easy updates without rebuild
+      - ./src/config/mybagel-458109-30f35338f350.json:/app/src/config/mybagel-458109-30f35338f350.json:ro
     networks:
       - bagel-network
 
