--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -193,11 +193,11 @@ jobs:
 
       - name: Create Google Service Account file on VM
         run: |
+          # GCP_SA_KEY should be base64 encoded
+          # To encode: cat service-account.json | base64
           gcloud compute ssh ${{ env.GCE_INSTANCE }} --zone=${{ env.GCE_ZONE }} --command="
             mkdir -p /opt/bagel-shop/secrets
-            cat > /opt/bagel-shop/secrets/google-sa.json << 'EOFSA'
-          ${{ secrets.GCP_SA_KEY }}
-          EOFSA
+            echo '${{ secrets.GCP_SA_KEY }}' | base64 -d > /opt/bagel-shop/secrets/google-sa.json
             chmod 600 /opt/bagel-shop/secrets/google-sa.json
           "
 
