--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -187,6 +187,7 @@ jobs:
           SUPABASE_URL=${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
           INVENTORY_PASSWORD=${{ secrets.INVENTORY_PASSWORD }}
+          LOTTERY_ADMIN_PASSWORD=${{ secrets.LOTTERY_ADMIN_PASSWORD }}
           DATABASE_URL=${{ secrets.DATABASE_URL }}
           EOF
           "
