--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   PROJECT_ID: mybagel-458109
-  GCE_INSTANCE: instance-20250531-132235
+  GCE_INSTANCE: bagel-vm
   GCE_ZONE: us-central1-c
   REGISTRY: us-central1-docker.pkg.dev
   REPOSITORY: bagel-repo
