--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,9 +122,13 @@ services:
     container_name: bagel-nginx
     restart: unless-stopped
     ports:
-      - "3000:3000"  # Only expose port 3000 (GCP firewall)
+      - "80:80"      # HTTP
+      - "443:443"    # HTTPS
+      - "3000:3000"  # Legacy support
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro  # SSL certificates
+      - ./certbot/www:/var/www/certbot:ro  # Let's Encrypt verification
     networks:
       - bagel-network
     depends_on:
