--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,20 +39,54 @@ http {
         server frontend:3000;
     }
 
-    # HTTP server on port 3000 (GCP firewall only allows 3000)
+    # HTTP server - redirect to HTTPS
     server {
-        listen 3000;
-        server_name _;
+        listen 80;
+        server_name carbs-reduced-admin.com www.carbs-reduced-admin.com;
+
+        # Allow Let's Encrypt verification
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Redirect all HTTP to HTTPS
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name carbs-reduced-admin.com www.carbs-reduced-admin.com;
+
+        # SSL certificates (managed by Certbot)
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
 
         # Health check endpoint
         location /health {
             proxy_pass http://api;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # API proxy - forward /api/* to backend api:8080/*
-        # CORS is handled by Flask backend, no need to set here
         location /api/ {
             proxy_pass http://api/api/;
             proxy_set_header Host $host;
@@ -79,36 +113,35 @@ http {
         }
     }
 
-    # HTTPS server (uncomment for production with SSL)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name your-domain.com;
-    #
-    #     ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-    #     ssl_prefer_server_ciphers off;
-    #
-    #     location /api {
-    #         rewrite ^/api(.*)$ $1 break;
-    #         proxy_pass http://api;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         limit_req zone=api_limit burst=20 nodelay;
-    #     }
-    #
-    #     location / {
-    #         proxy_pass http://frontend;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #     }
-    # }
+    # Legacy port 3000 server (for backward compatibility)
+    server {
+        listen 3000;
+        server_name _;
+
+        location /health {
+            proxy_pass http://api;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /api/ {
+            proxy_pass http://api/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            limit_req zone=api_limit burst=20 nodelay;
+        }
+
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+    }
 }
